# liblog

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.txt  cmake_uninstall.cmake.in
cmake/: Doxyfile.in  liblog-config.cmake.in
include/liblog/: defines.h  list.h  log.h  stderr.h  syslog.h  types.h
include/liblog/loggers/: color.h  file.h
include/log/: log.h  stderr.h  syslog.h
include/tools/: list.h
source/: log.c  logger.c  logger.h  main.c  namespace.c  namespace.h  stderr.c  stderr.h  syslog.c
source/loggers/: color.c  file.c
